--- a/style.css
+++ b/style.css
@@ -1,29 +1,19 @@
-*{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-main{
-    background: #424141 ;
-    height: 100vh;
-}
-
-h1{
-    color: aliceblue;
-}
-
-ul{
-    background-color: aliceblue;
-    
-}
-
-ul, li{
-    border: #424141 solid 1px ;
-    padding: 2px;
-}
-
-button{
-    color: aliceblue;
-    background: #424141;
-    border: white solid 1px ;
-    font-size: 18px;
-}
+/* Estilos básicos para a página */
+body {
+    font-family: sans-serif;
+    margin: 0;
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  #calendar {
+    width: 80%;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 10px; /* Ajustar o padding conforme necessário */
+  }
+  
